--- a/src/popup.html
+++ b/src/popup.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>SafeLink Popup</title>
-    <link rel="stylesheet" href="./popup/popup.css" />
+    <link rel="stylesheet" href="popup/popup.css" />
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/popup/popup.jsx"></script>
+    <script type="module" src="/src/popup/Popup.jsx"></script>
 </body>
 
 </html>
